# Hate-speech-detection

./: .gitignore  README.md
.github/workflows/: docker-publish.yml
backend_of_service/: pyproject.toml
backend_of_service/.github/workflows/: docker-publish.yml
backend_of_service/k8s/: deployment.yaml
backend_of_service/src/: api_schemas.py  app.py  config.py
notebooks/: proof_of_concept.ipynb
src/: trainer.py
training_model/notebooks/: proof_of_concept.ipynb
training_model/src/: dag_with_trainer.py  trainer.py
